Temporarily rename favicon.ico to favicona.ico to avoid favicon conflict

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <meta name="author" content="Coach Andrei Santos" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Favicon and circular website icon -->
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/websiteIcon.png" />
+    
+    <style>
+      /* Circular styling for the website icon */
+      link[rel="icon"][type="image/png"] {
+        border-radius: 50%;
+      }
+    </style>
+
     <meta property="og:title" content="Coach Andrei Santos - Online Fitness Coaching for Professionals" />
     <meta property="og:description" content="Transform your body and mind with personalized fitness programs designed for busy professionals. 10+ years experience, 500+ client transformations." />
     <meta property="og:type" content="website" />
